--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.3.3",
+    "classnames": "^2.3.2",
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-type-animation": "^2.1.2",
+    "sass": "^1.58.3"
   },
   "devDependencies": {
     "@types/node": "^18.14.0",
