SQ Set folder for Github pages

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,16 @@
+---
 name: Build and Deploy
-on: [push]
+
+on:
+  push:
+    branches: production
+    paths-ignore:
+      - package.json
+      - package-lock.json
+
 permissions:
   contents: write
+
 jobs:
   build-and-deploy:
     concurrency: ci-${{ github.ref }}
@@ -19,3 +28,4 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: dist
+          target-folder: docs
