SQ Update branch for action

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Build and Deploy
 
 on:
   push:
-    branches: production
+    branches: main
     paths-ignore:
       - package.json
       - package-lock.json
